config/manager/apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller-service
  namespace: system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    control-plane: controller-manager
